2008-05-21 23:20 -0700  Rocco Rutte  <pdmef@gmx.net>  (bba92e401440)

	* imap/browse.c: Guard idata->mailbox read in imap_mailbox_state.
	Closes #3057.

2008-05-21 22:59 -0700  Piarres Beobide Egaña  <pi@beobide.net>  (51c494a2e735)

	* ChangeLog, po/eu.po: Updated Basque translation.

2008-05-21 22:55 -0700  René Clerc  <rene@clerc.nl>  (e95a579cf5e4)

	* po/nl.po: Updated Dutch translation

2008-05-21 20:36 +0200  Rocco Rutte  <pdmef@gmx.net>  (1bdb7a7c3c8f)

	* buffy.c, buffy.h: Fix new mail detection for >2 GB mboxes with
	$check_mbox_size set

	* mbox.c, sendlib.c: Use ftello() instead of ftell() in more places
	that need it (fixes progress updates for >2 GB mbox files)

	* doc/manual.xml.head, init.h: Improve documentation for handling
	multiple folders and new mail detection

2008-05-20 17:08 +0200  Paul Walker  <paul@black-sun.demon.co.uk>  (a4d423798321)

	* parse.c: Fix more compiler warnings on amd64 by use of %p instead of
	%x

2008-05-19 09:52 -0700  Ivan Vilata i Balaguer  <ivan@selidor.net>  (38319cd7d832)

	* po/ca.po: Updated Catalan translation

2008-05-19 18:49 +0200  Vladimir Marek  <Vladimir.Marek@Sun.COM>  (8ac4b70221ee)

	* Makefile.am: Unbreak build with included gettext by explicitly
	removing libs for mutt_md5

2008-05-19 11:14 +0200  Rocco Rutte  <pdmef@gmx.net>  (85654735d27e)

	* UPDATING: Mention mime_lookup change in UPDATING

2008-05-19 10:59 +0200  Paul Walker  <paul@black-sun.demon.co.uk>  (d3fd07d0016c)

	* init.c: Use %p instead of %x to debug-print pointers (fixes warnings
	on 64bit platforms)

2008-05-19 10:56 +0200  Rocco Rutte  <pdmef@gmx.net>  (771276a3bace)

	* Makefile.am: hcversion.h depends on new mutt_md5 tool

2008-05-18 12:42 -0700  Roland Rosenfeld  <roland@spinnaker.de>  (4ef0fc2f8378)

	* po/de.po: Updated German translation

2008-05-17 19:31 -0700  Andreas  <Andreas Jobs>  (aaeee8f868c4)

	* crypt-gpgme.c: Fix GPGME S/MIME micalg generation, broken
	in [e6f958b093b6]. Closes #2994.
